<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edit_profile_name_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/edit_task_title"
        android:hint="@string/edit_profile_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_profile_phone_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/edit_profile_phone"
        android:inputType="phone" />


</LinearLayout>
